<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_MyMqtt" Id="{9c572ae6-e06d-4a20-9a98-0f29ff25b54f}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'c++_compatible'}
FUNCTION_BLOCK FB_MyMqtt EXTENDS FB_IotMqttClient
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR

VAR
	(* received message *)
	{attribute 'TcEncoding':='UTF-8'}
	sTopicRcv : STRING(255);
	{attribute 'TcEncoding':='UTF-8'}
	sPayloadRcv : STRING(255);
	A: BOOL;
	nVar: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
]]></ST>
    </Implementation>
    <Method Name="OnMqttMessage" Id="{00b896c3-f44c-4cf4-aba5-b8400ecc5e1a}">
      <Declaration><![CDATA[{attribute 'c++_compatible'}
{attribute 'pack_mode' := '4'}
{attribute 'show'}
{attribute 'minimal_input_size' := '4'}
METHOD OnMqttMessage : HRESULT
VAR_IN_OUT CONSTANT
	topic	: STRING;
END_VAR
VAR_INPUT
	payload	: PVOID;
	length	: UDINT;
	qos	: TcIotMqttQos;
	repeated	: BOOL;
END_VAR

VAR
	sRecived: STRING(255);
Test :int ;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.nMessagesRcv := SUPER^.nMessagesRcv + 1;

STRNCPY( ADR(sTopicRcv), ADR(topic), SIZEOF(sTopicRcv) );
MEMCPY( ADR(sPayloadRcv), payload, MIN(length, DINT_TO_UDINT(SIZEOF(sPayloadRcv))) );
sTopicRcv;
sPayloadRcv;
nVar := STRING_TO_INT(sPayloadRcv);
IF sTopicRcv = 'BangsareLights' THEN
      CASE nVar OF 
		  0: ;
		  1:  SpotLight := NOT SpotLight;
		  2:  ReceptionLight := NOT ReceptionLight ;
		  3:  EntranceLight := NOT EntranceLight;
		  4:  BedRoomLight := NOT BedRoomLight;
		  5:  Livingroom := NOT Livingroom;
		  6:  WalkingClosett := NOT WalkingClosett;
		  7:  BjornLight := FALSE;
		  8:  BjornLight := TRUE;
		  9:  StairLight := FALSE;
		  10: StairLight := TRUE;
		  11: Spare := NOT Spare;
	  END_CASE
	  	Test :=Test +1;
	END_IF
	sPayloadRcv:='0';
OnMqttMessage := S_OK;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MyMqtt">
      <LineId Id="77" Count="0" />
      <LineId Id="45" Count="0" />
    </LineIds>
    <LineIds Name="FB_MyMqtt.OnMqttMessage">
      <LineId Id="3" Count="3" />
      <LineId Id="42" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="79" Count="10" />
      <LineId Id="95" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>